--- a/index.html
+++ b/index.html
@@ -92,17 +92,17 @@
 			<div class="reel">
 
 				<article>
-					<a href="#" class="image featured"><img class="card__image" src="assets\MyAssets\P images\1.jpg" alt="" />
-					</a>
+					<a href="Projects\csb-module-app\build\index.html" class="image featured"><img class="card__image" src="assets\MyAssets\P images\12.jpg" alt="" /></a>
 					<header>
-						<h3><a href="#"><b class="card__title">Vertigo App<b /></a></h3>
+						<h3><a href="Projects\EVE\index.html"><b class="card__title">CSB Module Lookup<b /></a></h3>
 					</header>
 					<div class="card__text">
-						<p>Vertigo was an app my team of 6 and I developed for TCD Adapt Medicine. It's an app that implements face tracking to help the rehabilitation of patients who suffer from inner ear damage or vertigo.</p>
+						<p>This is a react project I built for me and my coursemates to find out who we
+							share modules with. The project features heavy use of useStates to filter all the data.</p>
 					</div>
 					<div class="card__buttonContainer">
-						<a href="https://www.youtube.com/watch?v=tRxP3dSUk_0&feature=youtu.be" class="button card__button">Video</a>
-						<a href="https://github.com/ConOLeary/Vertigo_Project/tree/master/VertigoApp" class="button card__button">CODE</a>
+						<a href="Projects\csb-module-app\build\index.html" class="button card__button">DEMO</a>
+						<a href="https://github.com/FranklinUmeObi/FranklinUmeObi.github.io/tree/master/Projects/csb-module-app" class="button card__button">CODE</a>
 					</div>
 				</article>
 
@@ -118,6 +118,21 @@
 					<div class="card__buttonContainer">
 						<a href="Projects\EVE\index.html" class="button card__button">DEMO</a>
 						<a href="https://github.com/FranklinUmeObi/FranklinUmeObi.github.io/tree/master/Projects/EVE" class="button card__button">CODE</a>
+					</div>
+				</article>
+
+				<article>
+					<a href="#" class="image featured"><img class="card__image" src="assets\MyAssets\P images\1.jpg" alt="" />
+					</a>
+					<header>
+						<h3><a href="#"><b class="card__title">Vertigo App<b /></a></h3>
+					</header>
+					<div class="card__text">
+						<p>Vertigo was an app my team of 6 and I developed for TCD Adapt Medicine. It's an app that implements face tracking to help the rehabilitation of patients who suffer from inner ear damage or vertigo.</p>
+					</div>
+					<div class="card__buttonContainer">
+						<a href="https://www.youtube.com/watch?v=tRxP3dSUk_0&feature=youtu.be" class="button card__button">Video</a>
+						<a href="https://github.com/ConOLeary/Vertigo_Project/tree/master/VertigoApp" class="button card__button">CODE</a>
 					</div>
 				</article>
 
