--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					</div>
 					<div class="card__buttonContainer">
 						<a href="Projects\CsbModuleLookup\build\index.html" class="button card__button">DEMO</a>
-						<a href="https://github.com/FranklinUmeObi/FranklinUmeObi.github.io/tree/master/Projects/CsbModuleLookup/src" class="button card__button">CODE</a>
+						<a href="https://github.com/FranklinUmeObi/My-New-Website/tree/master/Projects/CsbModuleLookup/src" class="button card__button">CODE</a>
 					</div>
 				</article>
 
@@ -117,7 +117,7 @@
 					</div>
 					<div class="card__buttonContainer">
 						<a href="Projects\EVE\index.html" class="button card__button">DEMO</a>
-						<a href="https://github.com/FranklinUmeObi/FranklinUmeObi.github.io/tree/master/Projects/EVE" class="button card__button">CODE</a>
+						<a href="https://github.com/FranklinUmeObi/My-New-Website/tree/master/Projects/EVE" class="button card__button">CODE</a>
 					</div>
 				</article>
 
