--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 				</article>
 
 				<article>
-					<a href="Projects\EVE\index.html" class="image featured"><img class="card__image" src="assets\MyAssets\P images\13.jpg" alt="" /></a>
+					<a href="Projects\EVE\index.html" class="image featured"><img class="card__image" src="assets\MyAssets\P images\2.jpg" alt="" /></a>
 					<header>
 						<h3><a href="Projects\EVE\index.html"><b class="card__title">EVE Website<b /></a></h3>
 					</header>
@@ -122,14 +122,14 @@
 				</article>
 
 				<article>
-					<a href="Projects\Unity_Getaway\index.html" class="image featured"><img class="card__image" src="assets\MyAssets\P images\2.jpg" alt="" /></a>
+					<a href="Projects\Unity_Getaway\index.html" class="image featured"><img class="card__image" src="assets\MyAssets\P images\13.jpg" alt="" /></a>
 					<header>
 						<h3><a href="Projects\Unity_Getaway\index.html"><b class="card__title">Getaway<b /></a></h3>
 					</header>
 					<div class="card__text">
 						<p>This is my first game development project, It's a game called
-							Getaway and the aim of the game is to make it though all the
-							obstacles.The game is a subway surfer type game. I built this using Unity and coded using C# </p>
+							Getaway and the aim of the game is to make it through all the
+							obstacles. The game is a subway surfer type game. I built this using Unity and coded using C# </p>
 					</div>
 					<div class="card__buttonContainer">
 						<a href="Projects\Unity_Getaway\index.html" class="button card__button">DEMO</a>
