renamed js file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="keywords" content="Franklin, franklinumeobi, franklin obiekwe, Trinity College Dublin, ume obiekwe, csb class rep, freelance developer, designer ">
     <link rel="stylesheet" href="./assets/css/theMain.css" />
     <link rel="stylesheet" href="./assets/MyAssets/frankCSS.css" />
-    <script defer src="script.js"></script>
+    <script defer src="lightbox.js"></script>
 
     <noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -357,7 +357,8 @@
 			<div class="reel">
 
 				<article>
-					<div class="image featured"><img class="card__image" src="assets\MyAssets\G images\g1.jpg" alt="" /></div>
+					<div class="image featured"><img class="card__image" src="assets\MyAssets\G images\g1.jpg" alt="" />
+					</div>
 					<header>
 						<h3><a href="#"><b class="card__title">Clone Trooper<b /></a></h3>
 					</header>
@@ -367,7 +368,8 @@
 					</div>
 				</article>
 				<article>
-					<div class="image featured"><img class="card__image" src="assets\MyAssets\G images\g2.jpg" alt="" /></div>
+					<div class="image featured"><img class="card__image" src="assets\MyAssets\G images\g2.jpg" alt="" />
+					</div>
 					<header>
 						<h3><a href="#"><b class="card__title">It's Alive<b /></a></h3>
 					</header>
@@ -377,7 +379,8 @@
 					</div>
 				</article>
 				<article>
-					<div class="image featured"><img class="card__image" src="assets\MyAssets\G images\g3.jpg" alt="" /></div>
+					<div class="image featured"><img class="card__image" src="assets\MyAssets\G images\g3.jpg" alt="" />
+					</div>
 					<header>
 						<h3><a href="#"><b class="card__title">Recruitment<b /></a></h3>
 					</header>
@@ -387,7 +390,8 @@
 					</div>
 				</article>
 				<article>
-					<div class="image featured"><img class="card__image" src="assets\MyAssets\G images\g4.jpg" alt="" /></div>
+					<div class="image featured"><img class="card__image" src="assets\MyAssets\G images\g4.jpg" alt="" />
+					</div>
 					<header>
 						<h3><a href="#"><b class="card__title">SuperBowl Party<b /></a></h3>
 					</header>
@@ -397,7 +401,8 @@
 					</div>
 				</article>
 				<article>
-					<div class="image featured"><img class="card__image" src="assets\MyAssets\G images\g5.jpg" alt="" /></div>
+					<div class="image featured"><img class="card__image" src="assets\MyAssets\G images\g5.jpg" alt="" />
+					</div>
 					<header>
 						<h3><a href="#"><b class="card__title">DigiTill<b /></a></h3>
 					</header>
@@ -409,7 +414,8 @@
 					</div>
 				</article>
 				<article>
-					<div class="image featured"><img class="card__image" src="assets\MyAssets\G images\g6.jpg" alt="" /></div>
+					<div class="image featured"><img class="card__image" src="assets\MyAssets\G images\g6.jpg" alt="" />
+					</div>
 					<header>
 						<h3><a href="#"><b class="card__title">DJ Human<b /></a></h3>
 					</header>
@@ -419,7 +425,8 @@
 					</div>
 				</article>
 				<article>
-					<div class="image featured"><img class="card__image" src="assets\MyAssets\G images\g7.jpg" alt="" /></div>
+					<div class="image featured"><img class="card__image" src="assets\MyAssets\G images\g7.jpg" alt="" />
+					</div>
 					<header>
 						<h3><a href="#"><b class="card__title">Cartoon frank<b /></a></h3>
 					</header>
