--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <head>
     <title>Franklin Ume Obiekwe - Portfolio</title>
     <meta charset="utf-8" />
+
+    <link rel="shortcut icon" type="image/jpg" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="description" content="The Web Portfolio of Franklin Ume Obiekwe,
 		a Computer Science & Business student at Trinity College Dublin" />
