added dcg project

--- a/index.html
+++ b/index.html
@@ -96,11 +96,13 @@
 			<div class="reel">
 
 				<article>
+					<!-- https://stackoverflow.com/questions/40146067/i-have-godaddy-shared-web-hosting-i-need-to-host-node-js-website-can-host-site/42234844#42234844 -->
+					<!-- This is the link to host a server on godaddy -->
 					<a href="Projects\CsbModuleLookup\build\index.html" class="image featured"><img class="card__image"
 							src="assets\MyAssets\P images\12.jpg" alt="" /></a>
 					<header>
-						<h3><a href="Projects\CsbModuleLookup\build\index.html"><b class="card__title">CSB Module
-									Lookup<b /></a></h3>
+						<h3><a href="Projects\CsbModuleLookup\build\index.html">
+							<b class="card__title">CSB ModuleLookup<b /></a></h3>
 					</header>
 					<div class="card__text">
 						<p>This is a react project I built for me and my coursemates to find out who we
@@ -369,6 +371,23 @@
 							window perspective and lots of color grading was needed.</p>
 					</div>
 				</article>
+
+				<article>
+					<div class="image featured"><img class="card__image" src="assets\MyAssets\G images\dcg.jpg" alt="" />
+					</div>
+					<header>
+						<h3><a href="https://docs.google.com/presentation/d/1u2YGUJeZMeWp81Iz_RXNArXbc5kkWlOD7PaOwYprR8Y/edit?usp=sharing" ><b class="card__title">Leaving Cert DCG Project<b /></a></h3>
+					</header>
+					<div class="card__text">
+						<a href="https://docs.google.com/presentation/d/1u2YGUJeZMeWp81Iz_RXNArXbc5kkWlOD7PaOwYprR8Y/edit?usp=sharing" 
+						class="button card__button">Presentation</a>
+						<p>This is a project I did for my Leaving Cert Design & Communication Graphics Subject. The Topic for the 
+							year was Computer Mice. For my personalised mouse, I went with the Theme of Man Meets Nature in the ocean.
+							My resulting Computer Mouse was a Submarine and Killer whale hybrid.
+						</p>
+					</div>
+				</article>
+
 				<article>
 					<div class="image featured"><img class="card__image" src="assets\MyAssets\G images\g2.jpg" alt="" />
 					</div>
