added symbollic programming project

--- a/index.html
+++ b/index.html
@@ -134,6 +134,26 @@
 					</div>
 				</article>
 
+
+				<article>
+					<a href="Projects\SymbollicProgramming\index.html" class="image featured"><img class="card__image"
+							src="assets\MyAssets\P images\14.jpg" alt="" /></a>
+					<header>
+						<h3><a href="Projects\SymbollicProgramming\index.html"><b class="card__title">CSU34011<b /></a></h3>
+					</header>
+					<div class="card__text">
+						<p>This is a simple website I built for my Symbollic Programming module. The website my lecturer was using had no 
+							css on his website and looked very plain. I decided to spruce it up for free as I would be using this site 3 times
+							a week for the whole semester
+						</p>
+					</div>
+					<div class="card__buttonContainer">
+						<a href="Projects\SymbollicProgramming\index.html" class="button card__button">DEMO</a>
+						<a href="https://github.com/FranklinUmeObi/My-New-Website/tree/master/Projects/SymbollicProgramming"
+							class="button card__button">CODE</a>
+					</div>
+				</article>
+
 				<article>
 					<a href="Projects\Unity_Getaway\index.html" class="image featured"><img class="card__image"
 							src="assets\MyAssets\P images\13.jpg" alt="" /></a>
