typos  ( push the new project to hosting )

--- a/index.html
+++ b/index.html
@@ -528,8 +528,8 @@
 
 
 			<div class="myBotForm">
-				<h2 class="major myAlign">If you are Interested in working with me,
-					feel Free to send me an E-Mail Here.</h2>
+				<h2 class="major myAlign">If you are interested in working with me,
+					feel free to send me an e-mail here.</h2>
 				<form method="POST" action="contactForm.php" class="myForm, myUpMarg">
 					<div class="fields">
 						<div class="field">
