added new cartoon me and reshuffling

--- a/index.html
+++ b/index.html
@@ -134,6 +134,46 @@
 					</div>
 				</article>
 
+				<article>
+					<a href="Projects\AudioVisualizer\index.html" class="image featured"><img class="card__image"
+							src="assets\MyAssets\P images\4.jpg" alt="" /></a>
+					<header>
+						<h3><a href="Projects\AudioVisualizer\index.html"><b class="card__title">Audio
+									Visualiser<b /></a></h3>
+					</header>
+					<div class="card__text">
+						<p>This is an Audio Visualiser I made using audio analysis tools made available by the p5 sound
+							library. The song being used is: Top Songs of 2019 - A Cappella Medley/Mashup by Rosendale
+							on YouTube</p>
+					</div>
+					<div class="card__buttonContainer">
+						<a href="Projects\AudioVisualizer\index.html" class="button card__button">DEMO</a>
+						<a href="https://github.com/FranklinUmeObi/FranklinUmeObi.github.io/tree/master/Projects/AudioVisualizer"
+							class="button card__button">CODE</a>
+					</div>
+				</article>
+
+				<article>
+					<a href="Projects\Chess\index.html" class="image featured"><img class="card__image"
+							src="assets\MyAssets\P images\5.jpg" alt="" /></a>
+					<header>
+						<h3><a href="Projects\Chess\index.html"><b class="card__title">Playable Chess<b /></a></h3>
+					</header>
+					<div class="card__text">
+						<p>This is a chess game made completely from scratch using p5.js. I didn't watch any tutorials
+							as I wanted to figure this out by myself. 1000 lines of code later and a still broken king,
+							it is basically finished. The game is basically
+							completed except for the castling and the en passant rules. Due to the kings not being bug
+							free the game doesnt alert a winner but if you know the rules of chess you can play against
+							a friend like it was any other medium to play chess!"
+						</p>
+					</div>
+					<div class="card__buttonContainer">
+						<a href="Projects\Chess\index.html" class="button card__button">DEMO</a>
+						<a href="https://github.com/FranklinUmeObi/FranklinUmeObi.github.io/tree/master/Projects/Chess"
+							class="button card__button">CODE</a>
+					</div>
+				</article>
 
 				<article>
 					<a href="Projects\SymbollicProgramming\index.html" class="image featured"><img class="card__image"
@@ -189,47 +229,6 @@
 						<a href="https://www.youtube.com/watch?v=tRxP3dSUk_0&feature=youtu.be"
 							class="button card__button">Video</a>
 						<a href="https://github.com/ConOLeary/Vertigo_Project/tree/master/VertigoApp"
-							class="button card__button">CODE</a>
-					</div>
-				</article>
-
-				<article>
-					<a href="Projects\AudioVisualizer\index.html" class="image featured"><img class="card__image"
-							src="assets\MyAssets\P images\4.jpg" alt="" /></a>
-					<header>
-						<h3><a href="Projects\AudioVisualizer\index.html"><b class="card__title">Audio
-									Visualiser<b /></a></h3>
-					</header>
-					<div class="card__text">
-						<p>This is an Audio Visualiser I made using audio analysis tools made available by the p5 sound
-							library. The song being used is: Top Songs of 2019 - A Cappella Medley/Mashup by Rosendale
-							on YouTube</p>
-					</div>
-					<div class="card__buttonContainer">
-						<a href="Projects\AudioVisualizer\index.html" class="button card__button">DEMO</a>
-						<a href="https://github.com/FranklinUmeObi/FranklinUmeObi.github.io/tree/master/Projects/AudioVisualizer"
-							class="button card__button">CODE</a>
-					</div>
-				</article>
-
-				<article>
-					<a href="Projects\Chess\index.html" class="image featured"><img class="card__image"
-							src="assets\MyAssets\P images\5.jpg" alt="" /></a>
-					<header>
-						<h3><a href="Projects\Chess\index.html"><b class="card__title">Playable Chess<b /></a></h3>
-					</header>
-					<div class="card__text">
-						<p>This is a chess game made completely from scratch using p5.js. I didn't watch any tutorials
-							as I wanted to figure this out by myself. 1000 lines of code later and a still broken king,
-							it is basically finished. The game is basically
-							completed except for the castling and the en passant rules. Due to the kings not being bug
-							free the game doesnt alert a winner but if you know the rules of chess you can play against
-							a friend like it was any other medium to play chess!"
-						</p>
-					</div>
-					<div class="card__buttonContainer">
-						<a href="Projects\Chess\index.html" class="button card__button">DEMO</a>
-						<a href="https://github.com/FranklinUmeObi/FranklinUmeObi.github.io/tree/master/Projects/Chess"
 							class="button card__button">CODE</a>
 					</div>
 				</article>
@@ -420,14 +419,13 @@
 					</div>
 				</article>
 				<article>
-					<div class="image featured"><img class="card__image" src="assets\MyAssets\G images\g3.jpg" alt="" />
+					<div class="image featured"><img class="card__image" src="assets\MyAssets\G images\g7.jpg" alt="" />
 					</div>
 					<header>
-						<h3><a href="#"><b class="card__title">Recruitment<b /></a></h3>
+						<h3><a href="#"><b class="card__title">Cartoon frank<b /></a></h3>
 					</header>
 					<div class="card__text">
-						<p>This is the recruiting poster I created for Trinity College Dublin American football in my
-							2nd year of being on the committee.</p>
+						<p>This was my attempt at turning a picture of me into a cartoon.</p>
 					</div>
 				</article>
 				<article>
@@ -441,6 +439,18 @@
 							in RiverBar.</p>
 					</div>
 				</article>
+				<article>
+					<div class="image featured"><img class="card__image" src="assets\MyAssets\G images\g3.jpg" alt="" />
+					</div>
+					<header>
+						<h3><a href="#"><b class="card__title">Recruitment<b /></a></h3>
+					</header>
+					<div class="card__text">
+						<p>This is the recruiting poster I created for Trinity College Dublin American football in my
+							2nd year of being on the committee.</p>
+					</div>
+				</article>
+				
 				<article>
 					<div class="image featured"><img class="card__image" src="assets\MyAssets\G images\g5.jpg" alt="" />
 					</div>
@@ -465,16 +475,7 @@
 							studies</p>
 					</div>
 				</article>
-				<article>
-					<div class="image featured"><img class="card__image" src="assets\MyAssets\G images\g7.jpg" alt="" />
-					</div>
-					<header>
-						<h3><a href="#"><b class="card__title">Cartoon frank<b /></a></h3>
-					</header>
-					<div class="card__text">
-						<p>This was my attempt at turning a picture of me into a cartoon.</p>
-					</div>
-				</article>
+				
 
 
 
@@ -497,10 +498,9 @@
 						</header>
 						<ul class="myList">
 							<li>Java</li>
-							<li>JavaScript: (P5.js, React Native)</li>
+							<li>JavaScript: (P5.js, React)</li>
 							<li>HTML</li>
 							<li>CSS</li>
-							<li>Phython: (Webscraping)</li>
 						</ul>
 					</article>
 
@@ -514,7 +514,6 @@
 							<li>Adobe Illustrator</li>
 							<li>Davinci Resolve Video Editing</li>
 							<li>Figma Wireframing</li>
-							<li>Animaker Animation</li>
 						</ul>
 					</article>
 				</div>
