Added 3 projects and split programming into front and back

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <!-- Nav -->
             <nav id="nav">
                 <ul>
-                    <li class="nav__item"><a href="index.html">Home</a></li>
-                    <li class="nav__item"><a href="#Pprojects">Programming</a></li>
+                    <li class="nav__item"><a href="#Bprojects">Back-end</a></li>
+                    <li class="nav__item"><a href="#Fprojects">Front-End</a></li>
                     <li class="nav__item"><a href="#GDprojects">Graphic Design</a></li>
                     <li class="nav__item"><a href="#footer">Contact</a></li>
                 </ul>
@@ -86,8 +86,8 @@
 		</section>
 		<hr>
 		<section id="banner">
-			<header id="Pprojects">
-				<h2><strong>My Programming Projects<strong /></h2>
+			<header id="Bprojects">
+				<h2><strong>My Back-End Focused Programming Projects<strong /></h2>
 			</header>
 		</section>
 
@@ -96,40 +96,21 @@
 			<div class="reel">
 
 				<article>
-					<!-- https://stackoverflow.com/questions/40146067/i-have-godaddy-shared-web-hosting-i-need-to-host-node-js-website-can-host-site/42234844#42234844 -->
-					<!-- This is the link to host a server on godaddy -->
-					<a href="Projects\CsbModuleLookup\build\index.html" class="image featured"><img class="card__image"
-							src="assets\MyAssets\P images\12.jpg" alt="" /></a>
+					<a href="Projects\GithubMetricsVisualised\index.html" class="image featured"><img class="card__image"
+							src="assets\MyAssets\P images\16.jpg" alt="" /></a>
 					<header>
-						<h3><a href="Projects\CsbModuleLookup\build\index.html">
-							<b class="card__title">CSB ModuleLookup<b /></a></h3>
+						<h3><a href="Projects\GithubMetricsVisualised\index.html"><b class="card__title">
+							GitHub Metrics<b /></a></h3>
 					</header>
 					<div class="card__text">
-						<p>This is a react project I built for me and my coursemates to find out who we
-							share modules with. The project features heavy use of useStates to filter all the data.</p>
+						<p>A Website graphing Github API data about a user through the use of d3.js.
+							The visualisations i have created are a social graph linking repos and contributers,
+							pie chart to show the spread of commits and a treemap analyzing the languages usedin the users repos
+						</p>
 					</div>
 					<div class="card__buttonContainer">
-						<a href="Projects\CsbModuleLookup\build\index.html" class="button card__button">DEMO</a>
-						<a href="https://github.com/FranklinUmeObi/My-New-Website/tree/master/Projects/CsbModuleLookup/src"
-							class="button card__button">CODE</a>
-					</div>
-				</article>
-
-				<article>
-					<a href="Projects\EVE\index.html" class="image featured"><img class="card__image"
-							src="assets\MyAssets\P images\2.jpg" alt="" /></a>
-					<header>
-						<h3><a href="Projects\EVE\index.html"><b class="card__title">EVE Website<b /></a></h3>
-					</header>
-					<div class="card__text">
-						<p>This is my first project as a freelancer. My client was the Irish startup 'EVE'. They asked
-							me to design them a website for their upcoming app. "EVE creates a cohesive landscape of
-							charging options for Electric Vehicles, by aggregating
-							public and private resources."</p>
-					</div>
-					<div class="card__buttonContainer">
-						<a href="Projects\EVE\index.html" class="button card__button">DEMO</a>
-						<a href="https://github.com/FranklinUmeObi/My-New-Website/tree/master/Projects/EVE"
+						<a href="Projects\GithubMetricsVisualised\index.html" class="button card__button">DEMO</a>
+						<a href="https://github.com/FranklinUmeObi/Visualising-Software-Engineering"
 							class="button card__button">CODE</a>
 					</div>
 				</article>
@@ -171,25 +152,6 @@
 					<div class="card__buttonContainer">
 						<a href="Projects\Chess\index.html" class="button card__button">DEMO</a>
 						<a href="https://github.com/FranklinUmeObi/FranklinUmeObi.github.io/tree/master/Projects/Chess"
-							class="button card__button">CODE</a>
-					</div>
-				</article>
-
-				<article>
-					<a href="Projects\SymbollicProgramming\index.html" class="image featured"><img class="card__image"
-							src="assets\MyAssets\P images\14.jpg" alt="" /></a>
-					<header>
-						<h3><a href="Projects\SymbollicProgramming\index.html"><b class="card__title">CSU34011<b /></a></h3>
-					</header>
-					<div class="card__text">
-						<p>This is a simple website I built for my Symbollic Programming module. The website my lecturer was using had no 
-							css on his website and looked very plain. I decided to spruce it up for free as I would be using this site 3 times
-							a week for the whole semester
-						</p>
-					</div>
-					<div class="card__buttonContainer">
-						<a href="Projects\SymbollicProgramming\index.html" class="button card__button">DEMO</a>
-						<a href="https://github.com/FranklinUmeObi/My-New-Website/tree/master/Projects/SymbollicProgramming"
 							class="button card__button">CODE</a>
 					</div>
 				</article>
@@ -365,6 +327,135 @@
 
 			</div>
 		</section>
+
+		<section id="banner">
+			<header id="Fprojects">
+				<h2><strong>My Front-End Focused Programming Projects<strong /></h2>
+			</header>
+		</section>
+
+
+
+
+
+
+
+
+
+
+
+<!-- Carousel -->
+<section class="carousel">
+	<div class="reel">
+
+		<article>
+			<a href="Projects\LaughingSocks\build\index.html" class="image featured"><img class="card__image"
+					src="assets\MyAssets\P images\15.jpg" alt="" /></a>
+			<header>
+				<h3><a href="Projects\LaughingSocks\build\index.html"><b class="card__title">Laughing Socks<b /></a></h3>
+			</header>
+			<div class="card__text">
+				<p>This is an E-Commerce site I built using React. It possess all the main feaatures
+					you would expect a webstore to have (excluding payment)
+				</p>
+			</div>
+			<div class="card__buttonContainer">
+				<a href="Projects\LaughingSocks\build\index.html" class="button card__button">DEMO</a>
+				<a href="https://github.com/FranklinUmeObi/E-Business_GroupProject"
+					class="button card__button">CODE</a>
+			</div>
+		</article>
+		
+		<article>
+			<!-- https://stackoverflow.com/questions/40146067/i-have-godaddy-shared-web-hosting-i-need-to-host-node-js-website-can-host-site/42234844#42234844 -->
+			<!-- This is the link to host a server on godaddy -->
+			<a href="Projects\CsbModuleLookup\build\index.html" class="image featured"><img class="card__image"
+					src="assets\MyAssets\P images\12.jpg" alt="" /></a>
+			<header>
+				<h3><a href="Projects\CsbModuleLookup\build\index.html">
+					<b class="card__title">CSB ModuleLookup<b /></a></h3>
+			</header>
+			<div class="card__text">
+				<p>This is a website built using the MERN stack (Mongodb,Express,React,Node). I built this for me and my coursemates to find out who we
+					share modules with. The project features heavy use of useStates to filter all the data.
+				To host this on my site i used a static implementation but the MERN code is linked</p>
+			</div>
+			<div class="card__buttonContainer">
+				<a href="Projects\CsbModuleLookup\build\index.html" class="button card__button">DEMO</a>
+				<a href="https://github.com/FranklinUmeObi/CSB-Module-LookUp-MERN"
+					class="button card__button">CODE</a>
+			</div>
+		</article>
+
+		<article>
+			<a href="Projects\EVE\index.html" class="image featured"><img class="card__image"
+					src="assets\MyAssets\P images\2.jpg" alt="" /></a>
+			<header>
+				<h3><a href="Projects\EVE\index.html"><b class="card__title">EVE Website<b /></a></h3>
+			</header>
+			<div class="card__text">
+				<p>This is my first project as a freelancer. My client was the Irish startup 'EVE'. They asked
+					me to design them a website for their upcoming app. "EVE creates a cohesive landscape of
+					charging options for Electric Vehicles, by aggregating
+					public and private resources."</p>
+			</div>
+			<div class="card__buttonContainer">
+				<a href="Projects\EVE\index.html" class="button card__button">DEMO</a>
+				<a href="https://github.com/FranklinUmeObi/My-New-Website/tree/master/Projects/EVE"
+					class="button card__button">CODE</a>
+			</div>
+		</article>
+
+		<article>
+			<a href="Projects\YouTubeClone\build\index.html" class="image featured"><img class="card__image"
+					src="assets\MyAssets\P images\17.jpg" alt="" /></a>
+			<header>
+				<h3><a href="Projects\YouTubeClone\build\index.html"><b class="card__title">YouTube Clone<b /></a></h3>
+			</header>
+			<div class="card__text">
+				<p>This is a React Youtube Clone. Only The homepage was completed and there is no functionality
+				</p>
+			</div>
+			<div class="card__buttonContainer">
+				<a href="Projects\YouTubeClone\build\index.html" class="button card__button">DEMO</a>
+				<a href="https://github.com/FranklinUmeObi/E-Business_GroupProject"
+					class="button card__button">CODE</a>
+			</div>
+		</article>
+
+		<article>
+			<a href="Projects\SymbollicProgramming\index.html" class="image featured"><img class="card__image"
+					src="assets\MyAssets\P images\14.jpg" alt="" /></a>
+			<header>
+				<h3><a href="Projects\SymbollicProgramming\index.html"><b class="card__title">CSU34011<b /></a></h3>
+			</header>
+			<div class="card__text">
+				<p>This is a simple website I built for my Symbollic Programming module. The website my lecturer was using had no 
+					css on his website and looked very plain. I decided to spruce it up for free as I would be using this site 3 times
+					a week for the whole semester
+				</p>
+			</div>
+			<div class="card__buttonContainer">
+				<a href="Projects\SymbollicProgramming\index.html" class="button card__button">DEMO</a>
+				<a href="https://github.com/FranklinUmeObi/My-New-Website/tree/master/Projects/SymbollicProgramming"
+					class="button card__button">CODE</a>
+			</div>
+		</article>
+
+	</div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
